# Training-Studio_app

./: .coveragerc  .gitignore  .gridignore  .lightning  .lightningignore  .pre-commit-config.yaml  79627e4  881175a  MANIFEST.in  README.md  app.py  app_commands.py  app_hyperband.py  app_sklearn.py  big_model.py  boring_train.py  ethan-1d8bca46  my_first_training  objective.py  pyproject.toml  requirements.txt  run_wandb.sh  setup.cfg  setup.py  sweeper.py  test.py  train.py  train_cifar.py  training_app.py  training_studio_app.py  wandb_scratch.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mergify.yml
docs/: .buildinfo  genindex.html  index.html  install_beginner.html  installation.html  installation_mac.html  installation_win.html  objects.inv  search.html  searchindex.js  training_studio.html
examples/: 1_app_agnostic.py  2_app_pytorch_lightning.py  3_app_sklearn.py  4_app_grid_search.py  4_app_sweeper.py  5_app_random_search.py  README.md  app.py  app_base.py  app_pytorch_lightning.py  app_sweeper.py  requirements.txt
lightning_hpo/: __about__.py  __init__.py  config.py  file_server.py  hyperplot.py  loggers.py  new_optimizer.py  objective.py  optimizer.py  optuna_flow.py  setup_tools.py  sweeper.py  train.py.1  utils.py  wandb.py
lightning_training_studio/: __about__.py  __init__.py  setup_tools.py
requirements/: base.txt  docs.txt  test.txt
scripts/: train.py
sweep_examples/: 1_app_agnostic.py  2_app_pytorch_lightning.py  3_app_sklearn.py  4_app_grid_search.py  5_app_random_search.py  6_app_wandb.py  README.md  requirements.txt
(+330 files in other folders)
