# See
# https://github.com/Lightning-AI/lightning/blob/master/pyproject.toml
# https://mypy.readthedocs.io/en/stable/

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.isort]
known_first_party = [
    "lightning_training_studio"
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 120
